# raisim_a1

./: README.md
data/1-run/: Environment.hpp  cfg.yaml  mean200.csv  var200.csv
data/2-run/: Environment.hpp  cfg.yaml  mean200.csv  mean300.csv  var200.csv  var300.csv
data/3-run/: mean1200.csv  mean1300.csv  mean1400.csv  mean1500.csv  mean700.csv  var1200.csv  var1300.csv  var1400.csv  var1500.csv  var700.csv
docker/: Dockerfile  build_docker.sh  initial.bash  run_docker.sh
docker/req/: CMakeLists.txt  RaisimGymEnv.hpp  build.bash  rebuild.bash
docker/req/rsg_a1/: Environment.hpp  cfg.yaml  imgui.ini  runner.py  tester.py  visSetupCallback.hpp  wakeUp.py
docker/req/rsg_a1/bake/: Environment.hpp  cfg.yaml
docker/req/rsg_a1/run/: Environment.hpp  cfg.yaml
docker/req/visualizer/: guiState.hpp
docker/req/visualizer/a1/: a1_imgui_render_callback.hpp  font.hpp  frameVisualizer.hpp  gaitLogger.hpp  jointSpeedTorqueLogger.hpp  videoLogger.hpp
